Add hashed storage of email
This commit adds hashed storage of a user's email.

- Adds bcrypt dependency
- Adds hashing of email prior to storage
- Adds storage of hashed email

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "homepage": "https://github.com/PTFS-Europe/ems-db#readme",
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "db-migrate": "^0.11.6",
         "db-migrate-pg": "^1.0.0",
         "node-postgres": "^0.1.4",
