--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     },
     "homepage": "https://github.com/PTFS-Europe/ems-db#readme",
     "dependencies": {
-        "bcrypt": "^5.0.0",
         "db-migrate": "^0.11.6",
         "db-migrate-pg": "^1.0.0",
+        "libsodium-wrappers": "^0.7.8",
         "node-postgres": "^0.1.4",
         "yargs": "^15.3.1"
     },
