Fix typo in database.json.template

--- a/database.json.template
+++ b/database.json.template
@@ -2,7 +2,7 @@
     "super": {
         "driver": "pg",
         "user": "ems",
-        "password": "",
+        "password": ""
     },
     "test": {
         "driver": "pg",
